# Sea-Shanty

theGame/: CMakeLists.txt  main.cpp
theGame/cpp/: Game.cpp
theGame/cpp/AI/: Battle.cpp  Pirate.cpp
theGame/cpp/UI/: UI.cpp
theGame/cpp/abstract/: Character.cpp  IAttackable.cpp  IHealable.cpp
theGame/cpp/characters/: Doctor.cpp  Engineer.cpp  Soldier.cpp
theGame/cpp/models/: Ship.cpp
theGame/headers/: Game.h
theGame/headers/AI/: Battle.h  Pirate.h
theGame/headers/UI/: UI.h
theGame/headers/abstract/: Character.h  IAttackable.h  IHealable.h
theGame/headers/characters/: Doctor.h  Engineer.h  Soldier.h
theGame/headers/models/: Ship.h
